Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectObject.quorum
class Main
    action Main
        Object x
        Object o        
        o = cast(Object, x)
        if o:Equals(x)
            output "passed"
        end
    end
end
