Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjText.quorum
class main
    action Main
        Number num
        num = cast(Number, "text")
    end
end